2003-10-20  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-expander.c, cong-editor-area-expander.h, Makefile.am

	New files: CongEditorAreaExpander subclass

	* cong-editor-child-policy.c

	Remove spurious return from cong_editor_child_policy_remove_areas_for_node

2003-10-17  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-labelled.c, cong-editor-area-span-tag.c, cong-editor-area-structural.c, cong-editor-area-unknown-tag.c, cong-editor-area.c, cong-editor-area.h, cong-editor-node.c, cong-editor-node.h, cong-editor-widget.h, cong-editor-widget3.c, plugin-paragraph-area-paragraph.c

	Support for states for editor nodes and areas; pre-highlighting support.

2003-10-16  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-dispspec-registry.c

	Applied patch by Boris Goldowsky for bug #121984 (in slightly modified form)

	* cong-dispspec-registry.c

	Fix for bug #121984

	* cong-source-view.c

	Fixed a stupid bug
	
	* plugin-admonition-node-element.c, plugin-admonition-node-element.h, plugin-admonition.c, Makefile.am, cong-app.c, cong-fake-plugin-hooks.h

	New files: custom handling of DocBook admonition tags
	
	* plugin-docbook.c

	Custom property page for DocBook <ulink> tags

2003-10-14  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-labelled.c, cong-editor-area-labelled.h, Makefile.am, plugin-lists-area-listitem.c, plugin-lists-area-listitem.h

	Refactored CongEditorAreaListitem into a new CongEditorAreaLabelled class
	
	* plugin-lists-node-element-listitem.c, plugin-lists-node-element-listitem.h

	Fix for bug #122365 (updates for labels in listitem plugin)
	
	* cong-parser-error.c, cong-parser-error.h

	Support for parsing from a libxml2 URI

	* cong-editor-node-text.c, cong-file-properties.c, cong-primary-window.c, cursor.c, plugin-cleanup-source.c, popup.c

	Fixed some warnings and removed dead code

2003-10-13  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-node.c
